Added team section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <ul>
           <a href="#mission"><li>Mission</li></a>
           <a href="#bikes"><li>Bikes</li></a>
+          <a href="#team"><li>Our Team</li></a>
           <a href="#contact"><li>Contact</li></a>
         </ul>
       </nav>
@@ -53,6 +54,27 @@
           <h2>BMX Bikes</h2>
         </div>
       </section>
+
+      <section class="team-container" id="team">
+        <h2>Our Team</h2>
+        <div class="team">
+            <div class="teamate">
+                <img src="./assets/CEO.jpg" alt="">
+                <h2>Stan Akers</h2>
+                <h3>CEO</h3>
+            </div>
+            <div class="teamate">
+                <img src="./assets/COO.jpg" alt="">
+                <h2>Ellen Burrows</h2>
+                <h3>COO</h3>
+            </div>
+
+
+
+        </div>
+   
+    </section>
+
     </main>
 
     <footer class="contact" id="contact">
